syntax = "proto3";

package game;

import "koinos/options.proto";

message str {
   string value = 1;
 }
 message uint32 {
   uint32 value = 1;
 }
 message uint64 {
   uint64 value = 1 [jstype = JS_STRING];
 }
 message address {
   bytes value = 1 [(koinos.btype) = ADDRESS];
 }
 message boole {
   bool value = 1;
 }
 
 message empty_object {
 }

message gamedata {
   uint64 reward = 1 [jstype = JS_STRING];
}

message gamedata_args {
   bytes account = 1 [(koinos.btype) = ADDRESS];
   gamedata data = 2;
}
